	snippets.  Suggested by Patrice Dumas.  Other fixes for tests in
	out-of-source builds.

	* info/info-utils.c (printed_representation): Corrected output lengths
	for META-x and DEL.  Function comment corrected.
	(init_output_stream): Always initialize output_bytes_difference.
	(copy_converting): Remove unnecessary cast.
	(scan_reference_label): [QUOTE_NODENAMES] Skip quoting bytes properly.

2014-05-18  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Converter.pm (output): warn about 
	incompatibilities between output and split only if split.
	* tp/tests/Makefile.am, tp/tests/reference/, tp/tests/t/: add tests
	for stdout.
	* install-info/tests/Makefile.am (EXTRA_DIST): use 
	the correct file ii-0054-input-info-file.gz.
	* tp/texi2any.pl: put installation directory last in @INC,
	in order to have -I perl arguments take precedence.  Report
	from Aharon Robbins.
	* tp/texi2any.pl: no warning for non empty @part for docbook and
	HTML since non empty parts are formatted correctly for those
	formats.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): Formatting and tweaks to
	carrying character over from one line to another. Return proper
	value.
	* info/t/Init-intera.inc: Use usleep instead of sleep to speed up tests.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text, info_tag)
	* info/info-utils.c (printed_representation): do_tags argument
	removed.  All callers updated.
	* info/tag.c (handle_tag): Removed.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): Don't split printed
	representations like "^X" across lines.

	* info/info-utils.c (printed_representation): Take mbi_iterator_t
	argument and handle Info tags and terminal escape sequences.
	* info/window.c (process_node_text, window_scan_line): Use of
	printed_representation updated.
	* info/window.c (info_tag): No longer static.

2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>
