@@ -10,6 +10,9 @@
 	(copy_converting): Remove unnecessary cast.
 	(scan_reference_label): [QUOTE_NODENAMES] Skip quoting bytes properly.
 
+	* info/pseudotty.c: Don't open slave side of pseudoterminal
+	line.  Report on progress to stderr.
+
 2014-05-18  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/Converter.pm (output): warn about 
